css/styles.css
html, body {
    margin: 0;
    padding: 0;
    text-align: center;
    color: #473F41;
    text-align: left;
    font-family: century-gothic,sans-serif;
    font-weight: 400;
    font-style: normal;
    width: 100vw;
    height: 100vh;
}

h1 {
    /* font-style: italic; */
    margin: 10px;
    font-size: 60pt;
    font-weight: 300;
    line-height: 1;
}

h2 {
    font-size: 16pt;
    font-weight: 300;
    margin: 10px;
}

h3 {
    font-size: 12pt;
    font-weight: 400;
    margin: 10px;
}

p {
    font-weight: 100;
    margin: 10px;
    font-size: 10pt;
}

#lightning {
    background: linear-gradient(to right top, #141225, #302460, #4F3B97, #6257A5);
    width: 100vw;
    height: 100vh;
    position: absolute;
    top: 0;
    left: 0;
    margin: 0;
    animation: fadeout 3.5s forwards;
}

@keyframes fadeout {
    0% { opacity: 1; }
    100%   { opacity: 0; }
}

#lightning img {
    height: 100vh;
    width: 100vw;
}



#chart--container {
    width: 100%;
    display: flex;
    flex-direction: row;
    /* padding-top: 10px; */
}

#sidebar-left {
    /* width: 20%; */
    flex: 1 1 125px;
    display: flex;
    flex-direction: column;
    padding-left: 10px;
}

#sidebar-right {
    margin: 20px 0;
    /* width: 20%; */
    flex: 1 1 125px;
    display: flex;
    flex-direction: column;
}


#sidebar-right p {
    margin-left: 0;
}

#main {
    margin-top: 20px;
    width: 60%;
    flex: 1 1 700px;
    display:inline-block;
    height: 100%;
    /* flex-direction: column; */
}

#chart {
    /* max-height: 50vh; */
    /* position: relative; */
}

#containment {
    max-height: 20vh;
}

#timer {
    min-width: 150px;
    min-height: 150px;
    max-width: 200px;
    max-height: 200px;
    font-size: 26pt;
    background-color: #473F41;
    color: #FFFFFF;
    border-radius: 50%;
    display: inline-flex;
    align-items: center;
    justify-content: center;
    margin: 20px;
}

#effect {
    position: absolute;
}

#story {
    min-height: 20%;
    max-height: 35%
}

.container {
    padding: 0 10px;
    margin: 10px;
}

#burn svg {
    border: 1px solid #473F41;
}

.tooltip {
    position: absolute;
    left: 0px;
    top: 0px;
    visibility: hidden;
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-weight: normal;
    font-size: 16px;
    padding: 2px;
    pointer-events: none;
    background-color: rgba(255, 255, 255, 0.8);
    padding: 10px 20px 10px 20px;
    border-radius: 10px;
    color: #473F41;
}

.shelters {
    z-index: 0
}

.cities {
    z-index: 1
}
/*
.collapsible.local-button {
    background-color: rgba(61, 50, 139, .5);
}

.content.local-content {
    background-color: rgba(61, 50, 139, .4);
}

.collapsible.local-button:hover {
    border: 3px solid rgba(61, 50, 139, .6);
}

.collapsible.regional-button {
    background-color: rgba(118, 64, 145, .5);
}

.content.regional-content {
    background-color: rgba(118, 64, 145, .4);
}

.collapsible.regional-button:hover {
    border: 3px solid rgba(118, 64, 145, .6);
}

.collapsible.state-button {
    background-color: rgba(224, 89, 38, .5);
}

.content.state-content {
    background-color: rgba(224, 89, 38, .4);
}

.collapsible.state-button:hover {
    border: 3px solid rgba(224, 89, 38, .6);
}

.collapsible.country-button {
    background-color: rgba(246, 134, 31, .5);
}

.content.country-content {
    background-color: rgba(246, 134, 31, .4);
}

.collapsible.country-button:hover {
    border: 3px solid rgba(246, 134, 31, .6);
}

.collapsible {
    cursor: pointer;
    padding: 18px;
    width: 100%;
    border: none;
    text-align: left;
    outline: none;
    font-size: 15px;
    font-weight: 600;
}

.content {
    padding: 0 18px;
    display: none;
    overflow: hidden;
}

.impacts-icon-container {
    margin: 5px;
    display: flex;
    flex-wrap: column;
}

.impact {
    display: flex;
    align-items: center;
    margin: 3px;
}

.impact span {
    font-size: 10pt;
    padding-left: 5px;
}

.icon {
    max-height: 40px;
    max-width: 40px;
    width: 40px;
} */

